html/css/custom.css
.header nav {
    float: right !important;
}

.contacts .title {
  font-size: 18px !important;
}

.pineapple {
  display: block !important;
  text-align: center !important;
  padding: 10px;
  margin-top: 20px;
}

.pineapple-slide .slider-content-text {
  color: #2f2c2c !important;
  font-size: 24px;
}

.pineapple-slide .slider-image {
  width: 80%;
  margin-left: 10%;
  margin-top: -90px;
}

.main-slider .slider-content .slider-content-text {
  margin-bottom: 0px !important;
}

.heading-text {
  color: #2f2c2c !important;
}

.slides-title {
  font-size: 20px !important;
}

.testimonial-heading {
  font-size: 36px;
}

.slides-item {
  cursor: pointer;
}

.slides-item:hover {
  background-color: #d3d3d3;
}

.case-item {
  cursor: pointer;
  height: 350px;
  padding: 8px;
}

.case-item p {
  width: 100%;
}

.contact-label {
  font-size: 18px !important;
}

.top-slide {
  height: 550px !important;
}

@media (max-width: 980px) {
  .slider-content-text {
    font-size: 18px;
  }
}

@media (max-width: 768px) {
  .header-spacer {
    height: 25px;
  }

  .top-slide {
    height: 600px !important;
  }

  .slider-content {
    padding-left: 30px !important;
    padding-right: 30px !important;
  }

  .slider-content-text, .slider-content-title {
    text-align: left;
  }

  .pineapple-slide .slider-content-title {
    text-align: center;
  }
}

@media (max-width: 640px) {
  .pineapple-slide .slider-content-text {
      font-size: 18px;
      text-align: left;
  }

  .case-item {
    height: 400px;
  }

  .top-slide {
    height: 500px !important;
  }

  .slider-image {
    width: 50%;
    margin-left: 25% !important;
  }

  .conversion-slide .slider-image {
    width: 80%;
    margin-left: 10% !important;
  }
}

@media (max-width: 375px) {
  .pineapple img {
    max-width: 40%;
  }

  .main-slider .slider-content .slider-content-text {
    margin-top: 40px;
  }

  .main-slider-btn-wrap {
    margin-top: 50px !important;
  }

  .slider-image {
    display: none;
  }

  .swiper-container {
    height: 480px;
  }

  .top-slide {
    height: 400px !important;
  }
}

